src/parser/tests/parse_errors/snapshots/rusty__parser__tests__parse_errors__parse_error_containers_tests__function_return_type_with_initializer.snap
---
source: src/parser/tests/parse_errors/parse_error_containers_tests.rs
expression: pou.statements
---
[
    ReferenceExpr {
        kind: Member(
            Reference {
                name: "a",
            },
        ),
        base: None,
    },
]
