src/parser/tests/parse_errors/snapshots/rusty__parser__tests__parse_errors__parse_error_containers_tests__illegal_end_pou_keyword-2.snap
---
source: src/parser/tests/parse_errors/parse_error_containers_tests.rs
expression: pou.statements
---
[
    ReferenceExpr {
        kind: Member(
            Identifier {
                name: "b",
            },
        ),
        base: None,
    },
]
