src/parser/tests/parse_errors/snapshots/rusty__parser__tests__parse_errors__parse_error_containers_tests__program_with_illegal_return_variable_declaration.snap
---
source: src/parser/tests/parse_errors/parse_error_containers_tests.rs
expression: diagnostics
---
error: POU Type Program does not support a return type. Did you mean Function?
  ┌─ <internal>:2:29
  │
2 │                 PROGRAM foo : INT
  │                             ^^^^^ POU Type Program does not support a return type. Did you mean Function?


